[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
ring = { path = "../ring", features = ["rsa_signing", "use_heap"]}
untrusted = "0.6.2"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = "1.0.5"
sgx_tstd = "1.0.5"
sgx_tunittest = "=1.0.5-fix"
